updates
done comments and added new exception called missingcredientials